DSND-2871: Address PR comment and fix tests